--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^5.2.4",
     "@mui/styles": "^5.2.3",
     "matrix-js-sdk": "^15.2.1",
+    "nanoid": "^3.1.30",
     "next": "^12.0.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
