clean up 3d package

--- a/packages/3d/package.json
+++ b/packages/3d/package.json
@@ -7,6 +7,7 @@
   "devDependencies": {
     "@types/react": "17.0.37",
     "@types/react-dom": "^17",
+    "@types/three": "^0.135.0",
     "tsconfig": "*",
     "typescript": "^4.5.3"
   },
@@ -14,9 +15,6 @@
     "@react-three/cannon": "^4.3.0",
     "@react-three/drei": "^8.3.1",
     "@react-three/fiber": "^7.0.24",
-    "@react-three/xr": "^3.2.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
     "three": "^0.135.0"
   }
 }
