--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -9,9 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "3d": "workspace:^",
+    "3d": "*",
     "@react-three/cannon": "^4.3.0",
-    "@react-three/drei": "^8.3.1",
     "@react-three/fiber": "^7.0.24",
     "matrix-js-sdk": "^15.2.1",
     "next": "^12.0.7",
@@ -22,10 +21,10 @@
   "devDependencies": {
     "@types/react": "17.0.37",
     "@types/react-dom": "^17",
-    "config": "workspace:^",
+    "config": "*",
     "eslint": "7.32.0",
     "next-transpile-modules": "9.0.0",
-    "tsconfig": "workspace:^",
+    "tsconfig": "*",
     "typescript": "^4.5.3"
   }
 }
