--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -25,10 +25,10 @@
   "devDependencies": {
     "@types/react": "17.0.37",
     "@types/react-dom": "^17",
-    "config": "workspace:^",
+    "config": "*",
     "eslint": "^7.32.0",
     "next-transpile-modules": "^9.0.0",
-    "tsconfig": "workspace:^",
+    "tsconfig": "*",
     "typescript": "^4.5.3"
   }
 }
