--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+        with:
+          ref: ${{ github.head_ref }}
       - uses: creyD/prettier_action@v4.1.1
         with:
           prettier_options: --write **/*.{js,jsx,ts,tsx,md}
