--- a/packages/matrix/package.json
+++ b/packages/matrix/package.json
@@ -11,6 +11,8 @@
     "typescript": "^4.5.3"
   },
   "dependencies": {
-    "matrix-js-sdk": "^15.2.1"
+    "matrix-js-sdk": "^15.2.1",
+    "y-webrtc": "^10.2.2",
+    "yjs": "^13.5.23"
   }
 }
