--- a/apps/editor/package.json
+++ b/apps/editor/package.json
@@ -10,6 +10,11 @@
   },
   "dependencies": {
     "3d": "*",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@mui/icons-material": "^5.2.4",
+    "@mui/material": "^5.2.4",
+    "@mui/styles": "^5.2.3",
     "@react-three/cannon": "^4.5.0",
     "@react-three/drei": "^8.3.1",
     "@react-three/fiber": "^7.0.24",
@@ -17,6 +22,9 @@
     "next": "^12.0.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-draggable": "^4.4.4",
+    "react-resize-panel": "^0.3.5",
+    "react-split": "^2.0.14",
     "three": "^0.136.0"
   },
   "devDependencies": {
