--- a/apps/editor/package.json
+++ b/apps/editor/package.json
@@ -23,7 +23,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-split": "^2.0.14",
-    "three": "^0.136.0"
+    "three": "^0.136.0",
+    "ui": "*"
   },
   "devDependencies": {
     "@types/react": "17.0.37",
