--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -21,7 +21,8 @@
     "nanoid": "^3.1.30",
     "next": "^12.0.7",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "ui": "*"
   },
   "devDependencies": {
     "@types/react": "17.0.37",
