--- a/apps/editor/package.json
+++ b/apps/editor/package.json
@@ -24,7 +24,8 @@
     "react-dom": "^17.0.2",
     "react-split": "^2.0.14",
     "three": "^0.136.0",
-    "ui": "*"
+    "ui": "*",
+    "zustand": "^3.6.9"
   },
   "devDependencies": {
     "@types/react": "17.0.37",
