--- a/packages/3d/package.json
+++ b/packages/3d/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@react-three/cannon": "^4.5.0",
     "@react-three/fiber": "^7.0.24",
+    "nanoid": "^3.1.31",
     "three": "^0.136.0"
   }
 }
