--- a/packages/3d/package.json
+++ b/packages/3d/package.json
@@ -7,6 +7,7 @@
   "devDependencies": {
     "@types/react": "17.0.37",
     "@types/react-dom": "^17",
+    "@types/three": "^0.136.0",
     "tsconfig": "*",
     "typescript": "^4.5.3"
   },
