--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -22,6 +22,7 @@
     "next": "^12.0.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "swr": "^1.1.2",
     "ui": "*"
   },
   "devDependencies": {
