--- a/packages/matrix/package.json
+++ b/packages/matrix/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "matrix-js-sdk": "^15.2.1",
+    "swr": "^1.1.2",
     "y-webrtc": "^10.2.2",
     "yjs": "^13.5.23"
   }
