--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.2.4",
     "@mui/material": "^5.2.4",
-    "@mui/styles": "^5.2.3"
+    "@mui/styles": "^5.2.3",
+    "swr": "^1.1.2"
   }
 }
