--- a/apps/editor/package.json
+++ b/apps/editor/package.json
@@ -19,6 +19,7 @@
     "@react-three/drei": "^8.3.1",
     "@react-three/fiber": "^7.0.24",
     "matrix-js-sdk": "^15.2.1",
+    "nanoid": "^3.2.0",
     "next": "^12.0.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
