--- a/packages/ceramic/package.json
+++ b/packages/ceramic/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "devDependencies": {
     "@glazed/devtools": "^0.1.3",
+    "@react-three/cannon": "^4.6.1",
     "@types/react": "17.0.37",
     "@types/react-dom": "^17",
     "tsconfig": "*",
