--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -20,6 +20,7 @@
     "@react-three/cannon": "^4.5.0",
     "@react-three/drei": "^8.8.3",
     "@react-three/fiber": "^7.0.24",
+    "avatars": "*",
     "ceramic": "*",
     "nanoid": "^3.1.30",
     "next": "^12.0.7",
