--- a/packages/3d/package.json
+++ b/packages/3d/package.json
@@ -15,6 +15,7 @@
     "@react-three/cannon": "^4.5.0",
     "@react-three/drei": "^8.8.3",
     "@react-three/fiber": "^7.0.24",
+    "avatars": "*",
     "ceramic": "*",
     "nanoid": "^3.1.31",
     "three": "^0.136.0",
