--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -1,6 +1,7 @@
 {
   "name": "site",
   "version": "0.0.0",
+  "license": "GPL-3.0-or-later",
   "private": true,
   "scripts": {
     "dev": "next dev -p 3000",
