--- a/packages/ceramic/package.json
+++ b/packages/ceramic/package.json
@@ -1,9 +1,10 @@
 {
   "name": "ceramic",
   "version": "0.0.0",
+  "license": "GPL-3.0-or-later",
+  "private": true,
   "main": "./index.ts",
   "types": "./index.ts",
-  "license": "MIT",
   "devDependencies": {
     "@glazed/devtools": "^0.1.3",
     "@react-three/cannon": "^4.6.1",
