--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -1,8 +1,8 @@
 {
   "name": "config",
   "version": "0.0.0",
+  "private": true,
   "main": "index.js",
-  "license": "MIT",
   "files": [
     "eslint-preset.js"
   ],
