--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,9 +1,10 @@
 {
   "name": "ui",
   "version": "0.0.0",
+  "license": "GPL-3.0-or-later",
+  "private": true,
   "main": "./index.ts",
   "types": "./index.ts",
-  "license": "MIT",
   "devDependencies": {
     "@types/react": "17.0.37",
     "@types/react-dom": "^17",
