--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "format": "prettier --write \"**/*.{ts,tsx,md,json}\""
   },
   "pre-commit": [
-    "format",
     "lint"
   ],
   "devDependencies": {
@@ -44,5 +43,6 @@
   "engines": {
     "npm": ">=7.0.0",
     "node": ">=14.0.0"
-  }
+  },
+  "packageManager": "yarn@1.22.17"
 }
