--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,16 +10,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "ceramic": "*",
     "next": "^12.0.7",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1"
   },
   "devDependencies": {
     "@types/react": "17.0.37",
     "@types/react-dom": "^17",
+    "autoprefixer": "^10.4.2",
     "config": "*",
     "eslint": "^8.6.0",
     "next-transpile-modules": "^9.0.0",
+    "postcss": "^8.4.6",
+    "tailwindcss": "^3.0.23",
     "tsconfig": "*",
     "typescript": "^4.5.3"
   }
