--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -7,7 +7,9 @@
     "dev": "next dev -p 3000",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "ceramic": "*",
@@ -17,14 +19,23 @@
     "react-icons": "^4.3.1"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.3",
+    "@types/jest": "^27.4.1",
     "@types/react": "17.0.37",
     "@types/react-dom": "^17",
+    "@types/testing-library__jest-dom": "^5.14.2",
+    "@types/testing-library__react": "^10.2.0",
     "autoprefixer": "^10.4.2",
     "config": "*",
     "eslint": "^8.6.0",
+    "jest": "^27.5.1",
     "next-transpile-modules": "^9.0.0",
     "postcss": "^8.4.6",
     "tailwindcss": "^3.0.23",
+    "ts-jest": "^27.1.3",
     "tsconfig": "*",
     "typescript": "^4.5.3"
   }
