--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "lint": "turbo run lint",
     "test": "turbo run test",
     "format": "prettier --write \"**/*.{ts,tsx,md,json}\"",
-    "ready": "yarn format && yarn lint && yarn test && yarn build"
+    "ready": "yarn format && yarn lint && yarn build && yarn test"
   },
   "pre-commit": [
     "lint",
