--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,6 +16,7 @@
     "@react-three/cannon": "^4.7.0",
     "@react-three/fiber": "^7.0.26",
     "ceramic": "*",
+    "jotai": "^1.6.0",
     "next": "^12.0.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
