--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,7 +14,9 @@
     "@react-three/cannon": "^4.7.0",
     "@react-three/fiber": "^7.0.26",
     "ceramic": "*",
+    "idb": "^7.0.0",
     "jotai": "^1.6.0",
+    "nanoid": "^3.3.1",
     "next": "^12.0.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
