--- a/packages/ceramic/package.json
+++ b/packages/ceramic/package.json
@@ -9,11 +9,11 @@
     "create": "node --experimental-json-modules scripts/create-model.mjs"
   },
   "devDependencies": {
+    "3d": "*",
     "@glazed/devtools": "^0.1.5",
     "@stablelib/random": "^1.0.1",
     "@types/react": "17.0.37",
     "@types/react-dom": "^17",
-    "3d": "*",
     "key-did-provider-ed25519": "^1.1.0",
     "key-did-resolver": "^1.4.4",
     "tsconfig": "*",
@@ -27,6 +27,6 @@
     "@glazed/tile-loader": "^0.1.3",
     "dids": "^2.4.3",
     "jotai": "^1.6.0",
-    "swr": "^1.2.2"
+    "react-query": "^3.34.16"
   }
 }
