--- a/packages/ceramic/package.json
+++ b/packages/ceramic/package.json
@@ -26,6 +26,7 @@
     "@glazed/did-datastore": "^0.2.3",
     "@glazed/tile-loader": "^0.1.3",
     "dids": "^2.4.3",
+    "ipfs-core": "^0.14.1",
     "jotai": "^1.6.0",
     "react-query": "^3.34.16"
   }
