--- a/packages/3d/package.json
+++ b/packages/3d/package.json
@@ -13,6 +13,7 @@
     "typescript": "^4.5.3"
   },
   "dependencies": {
+    "@pixiv/three-vrm": "^0.6.10",
     "@react-three/cannon": "^4.7.0",
     "@react-three/drei": "^8.11.0",
     "@react-three/fiber": "^7.0.26",
