use zustand for editor state

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -25,7 +25,8 @@
     "react-query": "^3.34.16",
     "three": "^0.138.0",
     "y-webrtc": "^10.2.2",
-    "yjs": "^13.5.28"
+    "yjs": "^13.5.28",
+    "zustand": "^3.7.1"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.16.11",
