--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,6 +16,7 @@
     "@react-three/fiber": "^7.0.26",
     "ceramic": "*",
     "idb": "^7.0.0",
+    "ipfs-only-hash": "^4.0.0",
     "jotai": "^1.6.0",
     "nanoid": "^3.3.1",
     "next": "^12.0.7",
