--- a/packages/3d/package.json
+++ b/packages/3d/package.json
@@ -17,6 +17,7 @@
     "@react-three/cannon": "^4.7.0",
     "@react-three/drei": "^8.11.0",
     "@react-three/fiber": "^7.0.26",
+    "jotai": "^1.6.1",
     "three": "^0.138.0"
   }
 }
