--- a/packages/3d/package.json
+++ b/packages/3d/package.json
@@ -18,6 +18,8 @@
     "@react-three/drei": "^8.11.0",
     "@react-three/fiber": "^7.0.26",
     "jotai": "^1.6.1",
-    "three": "^0.137.0"
+    "nanoid": "^3.3.1",
+    "three": "^0.137.0",
+    "zustand": "^3.7.1"
   }
 }
