--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -25,9 +25,8 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-query": "^3.34.16",
+    "socket.io-client": "^4.4.1",
     "three": "^0.137.0",
-    "y-webrtc": "^10.2.2",
-    "yjs": "^13.5.28",
     "zustand": "^3.7.1"
   },
   "devDependencies": {
