--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -7,6 +7,7 @@
     "dev": "nodemon ."
   },
   "dependencies": {
+    "express": "^4.17.3",
     "socket.io": "^4.4.1"
   },
   "devDependencies": {
