--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,5 +28,6 @@ jobs:
           node-version: "16"
           cache: "yarn"
       - run: yarn install
+      - run: yarn codegen
       - run: yarn test
       - run: yarn build
