--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -8,7 +8,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "codegen": "graphql-codegen --config codegen.yml && typechain --target ethers-v5 --out-dir contracts"
+    "codegen": "graphql-codegen --config codegen.yml && typechain --target ethers-v5 --out-dir contracts '**/abis/*.json'"
   },
   "dependencies": {
     "3d": "*",
@@ -26,7 +26,6 @@
     "jotai": "^1.6.4",
     "nanoid": "^3.3.1",
     "next": "^12.0.7",
-    "omit-deep": "^0.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
