--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -20,6 +20,7 @@
     "ethers": "^5.6.4",
     "graphql": "^16.3.0",
     "idb": "^7.0.0",
+    "immer": "^9.0.12",
     "ipfs-core": "^0.14.3",
     "ipfs-http-client": "^56.0.3",
     "ipfs-only-hash": "^4.0.0",
@@ -30,6 +31,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-query": "^3.34.16",
+    "scene": "*",
     "socket.io-client": "^4.4.1",
     "three": "^0.137.0",
     "zustand": "^3.7.1"
