--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -27,8 +27,10 @@
     "jotai": "^1.6.4",
     "nanoid": "^3.3.1",
     "next": "^12.0.7",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.1.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
+    "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
     "react-query": "^3.34.16",
     "scene": "*",
@@ -49,8 +51,9 @@
     "@testing-library/react": "^12.1.3",
     "@types/graphql": "^14.5.0",
     "@types/jest": "^27.4.1",
-    "@types/react": "17.0.37",
-    "@types/react-dom": "^17",
+    "@types/react": "^18.0.8",
+    "@types/react-dnd": "^3.0.2",
+    "@types/react-dom": "^18.0.3",
     "@types/testing-library__jest-dom": "^5.14.2",
     "@types/testing-library__react": "^10.2.0",
     "apollo": "^2.33.10",
