--- a/.gitignore
+++ b/.gitignore
@@ -6,10 +6,13 @@ node_modules
 .pnp.js
 
 # yarn
-.yarn/*
-!.yarn/releases
-!.yarn/plugins
 .pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions*
 
 # testing
 coverage
