--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -48,6 +48,7 @@
     "@graphql-codegen/typescript-react-apollo": "3.2.11",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
+    "@typechain/ethers-v5": "^10.0.0",
     "@types/graphql": "^14.5.0",
     "@types/jest": "^27.4.1",
     "@types/react": "^18.0.8",
