update prettier options

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,1 +1,6 @@
-{}
+{
+  "importOrder": ["<THIRD_PARTY_MODULES>", "^[./]"],
+  "importOrderSeparation": true,
+  "importOrderSortSpecifiers": true,
+  "importOrderGroupNamespaceSpecifiers": true
+}
