--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -15,6 +15,7 @@
     "@react-three/cannon": "^6.3.0",
     "@react-three/drei": "^9.6.2",
     "@react-three/fiber": "^8.0.13",
+    "@wired-xr/scene": "*",
     "ethers": "^5.6.4",
     "graphql": "^16.3.0",
     "idb": "^7.0.0",
@@ -29,7 +30,6 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
-    "scene": "*",
     "socket.io-client": "^4.4.1",
     "suspend-react": "^0.0.8",
     "three": "^0.140.0",
