--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -15,6 +15,7 @@
     "@react-three/cannon": "^6.3.0",
     "@react-three/drei": "^9.6.2",
     "@react-three/fiber": "^8.0.13",
+    "@wired-xr/avatar": "*",
     "@wired-xr/scene": "*",
     "ethers": "^5.6.4",
     "graphql": "^16.3.0",
@@ -54,15 +55,15 @@
     "@types/react-dom": "^18.0.3",
     "@types/testing-library__jest-dom": "^5.14.2",
     "@types/testing-library__react": "^10.2.0",
+    "@wired-xr/config": "*",
+    "@wired-xr/tsconfig": "*",
     "autoprefixer": "^10.4.2",
-    "config": "*",
     "eslint": "^8.14.0",
     "jest": "^27.5.1",
     "next-transpile-modules": "^9.0.0",
     "postcss": "^8.4.6",
     "tailwindcss": "^3.0.23",
     "ts-jest": "^27.1.3",
-    "tsconfig": "*",
     "typechain": "^8.0.0",
     "typescript": "^4.6.4"
   }
