--- a/package.json
+++ b/package.json
@@ -9,20 +9,22 @@
   ],
   "scripts": {
     "build": "turbo run build",
-    "dev": "turbo run dev --parallel",
     "codegen": "turbo run codegen",
+    "dev": "turbo run dev --parallel",
+    "format": "prettier --write . --ignore-path .gitignore && npx sort-package-json",
     "lint": "turbo run lint",
-    "test": "turbo run test",
-    "format": "prettier --write . --ignore-path .gitignore"
+    "test": "turbo run test"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^3.2.0",
     "prettier": "^2.5.1",
+    "prettier-plugin-sort-json": "^0.0.2",
+    "sort-package-json": "^1.57.0",
     "turbo": "latest"
   },
+  "packageManager": "yarn@3.2.0",
   "engines": {
-    "npm": ">=7.0.0",
-    "node": ">=16.0.0"
-  },
-  "packageManager": "yarn@3.2.0"
+    "node": ">=16.0.0",
+    "npm": ">=7.0.0"
+  }
 }
