--- a/packages/avatar/package.json
+++ b/packages/avatar/package.json
@@ -14,12 +14,8 @@
   },
   "dependencies": {
     "@pixiv/three-vrm": "^0.6.10",
-    "@react-three/cannon": "^6.3.0",
     "@react-three/drei": "^9.6.2",
     "@react-three/fiber": "^8.0.13",
-    "immer": "^9.0.12",
-    "nanoid": "^3.3.1",
-    "three": "^0.140.0",
-    "zustand": "^3.7.1"
+    "three": "^0.140.0"
   }
 }
