--- a/turbo.json
+++ b/turbo.json
@@ -1,14 +1,13 @@
 {
+  "$schema": "https://turborepo.org/schema.json",
+  "baseBranch": "origin/main",
   "pipeline": {
     "lint": {},
     "build": {
-      "dependsOn": ["^build"],
+      "dependsOn": ["^build", "codegen"],
       "outputs": ["dist/**", ".next/**"]
     },
     "codegen": {
-      "dependsOn": ["^build"]
-    },
-    "test": {
       "dependsOn": ["^build"]
     },
     "dev": {
