--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "client",
+  "name": "@wired-xr/client",
   "version": "0.0.0",
   "license": "GPL-3.0-or-later",
   "private": true,
@@ -36,14 +36,19 @@
     "zustand": "^3.7.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.17.10",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
+    "@ethersproject/abi": "^5.6.2",
+    "@ethersproject/bytes": "^5.6.1",
+    "@ethersproject/providers": "^5.6.6",
     "@graphql-codegen/cli": "2.6.2",
     "@graphql-codegen/introspection": "2.1.1",
     "@graphql-codegen/typescript": "2.4.8",
     "@graphql-codegen/typescript-operations": "2.3.5",
     "@graphql-codegen/typescript-urql": "^3.5.10",
     "@typechain/ethers-v5": "^10.0.0",
+    "@types/babel__core": "^7",
     "@types/graphql": "^14.5.0",
     "@types/react": "^18.0.8",
     "@types/react-dnd": "^3.0.2",
@@ -52,6 +57,7 @@
     "@wired-xr/tsconfig": "*",
     "autoprefixer": "^10.4.2",
     "eslint": "^8.14.0",
+    "graphql-tag": "^2.12.6",
     "next-transpile-modules": "^9.0.0",
     "postcss": "^8.4.6",
     "tailwindcss": "^3.0.23",
