--- a/packages/avatar/package.json
+++ b/packages/avatar/package.json
@@ -8,14 +8,18 @@
   "devDependencies": {
     "@types/react": "18.0.8",
     "@types/react-dom": "^18.0.3",
-    "@types/three": "^0.140.0",
+    "@types/three": "^0.137.0",
     "@wired-xr/tsconfig": "*",
     "typescript": "^4.6.4"
   },
   "dependencies": {
     "@pixiv/three-vrm": "^0.6.10",
-    "@react-three/drei": "^9.6.2",
-    "@react-three/fiber": "^8.0.13",
-    "three": "^0.140.0"
+    "@react-three/drei": "^9.6.2"
+  },
+  "peerDependencies": {
+    "@react-three/fiber": ">=8.0",
+    "react": ">=18.0",
+    "react-dom": ">=18.0",
+    "three": ">=0.137"
   }
 }
