--- a/packages/scene/package.json
+++ b/packages/scene/package.json
@@ -13,12 +13,16 @@
     "typescript": "^4.6.4"
   },
   "dependencies": {
-    "@react-three/cannon": "^6.3.0",
     "@react-three/drei": "^9.6.2",
-    "@react-three/fiber": "^8.0.13",
     "immer": "^9.0.12",
     "nanoid": "^3.3.1",
-    "three": "^0.140.0",
     "zustand": "^3.7.1"
+  },
+  "peerDependencies": {
+    "@react-three/cannon": ">=6.0",
+    "@react-three/fiber": ">=8.0",
+    "react": ">=18.0",
+    "react-dom": ">=18.0",
+    "three": ">=0.137"
   }
 }
