--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
           ref: ${{ github.head_ref }}
       - uses: creyD/prettier_action@v4.1.1
         with:
-          prettier_options: --write **/*.{js,jsx,ts,tsx,md,json}
+          prettier_options: --write .
 
   build:
     runs-on: ubuntu-latest
@@ -28,6 +28,4 @@ jobs:
           node-version: "16"
           cache: "yarn"
       - run: yarn install
-      - run: yarn codegen
-      - run: yarn test
       - run: yarn build
