--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,8 +8,8 @@ on:
 
 jobs:
   prettier:
+    name: "Prettier"
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v2
         with:
@@ -17,10 +17,9 @@ jobs:
       - uses: creyD/prettier_action@v4.1.1
         with:
           prettier_options: --write .
-
   build:
+    name: "Build"
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
