move docker build -> turbo build:docker

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -16,7 +16,7 @@ jobs:
           node-version: "16"
           cache: "yarn"
       - run: yarn install
-      - run: yarn build
+      - run: yarn build:docker
 
       - uses: docker/build-push-action@v1
         with:
