--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -2,27 +2,61 @@ name: CD
 
 on:
   push:
+    # Publish `main` as Docker `latest` image
     branches:
       - main
 
+    # Publish `v1.2.3` tags as releases
+    tags:
+      - v*
+
 jobs:
   publish:
-    name: "Publish Server Package"
+    name: "Publish Packages"
     runs-on: ubuntu-latest
+    permissions:
+      packages: write
+      contents: read
+
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
+      - name: "Checkout"
+        uses: actions/checkout@v2
+        with:
+          ref: ${{ github.head_ref }}
+
+      - name: "Set up node"
+        uses: actions/setup-node@v2
         with:
           node-version: "16"
           cache: "yarn"
-      - run: yarn install
-      - run: yarn build:docker
 
-      - uses: docker/build-push-action@v1
-        with:
-          registry: ghcr.io
-          username: "wired-xr"
-          password: ${{ secrets.PAT }}
-          repository: wired-xr/server
-          tags: latest
-          dockerfile: ./apps/server/Dockerfile
+      - name: "Install"
+        run: yarn install
+
+      - name: "Build"
+        run: yarn build:docker
+
+      - name: Log in to registry
+        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u $ --password-stdin
+
+      - name: "Push server"
+        run: |
+          IMAGE_NAME=server
+          IMAGE_ID=ghcr.io/${{ github.repository_owner }}/$IMAGE_NAME
+
+          # Change all uppercase to lowercase
+          IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
+
+          # Strip git ref prefix from version
+          VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
+
+          # Strip "v" prefix from tag name
+          [[ "${{ github.ref }}" == "refs/tags/"* ]] && VERSION=$(echo $VERSION | sed -e 's/^v//')
+
+          # Use Docker `latest` tag convention
+          [ "$VERSION" == "main" ] && VERSION=latest
+
+          # Push
+          echo IMAGE_ID=$IMAGE_ID
+          echo VERSION=$VERSION
+          docker push $IMAGE_ID:$VERSION
