--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,21 +10,36 @@ jobs:
   prettier:
     name: "Prettier"
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v2
+      - name: "Checkout"
+        uses: actions/checkout@v2
         with:
           ref: ${{ github.head_ref }}
-      - uses: creyD/prettier_action@v4.1.1
+
+      - name: "Format"
+        uses: creyD/prettier_action@v4.1.1
         with:
           prettier_options: --write .
+
   build:
     name: "Build"
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
+      - name: "Checkout"
+        uses: actions/checkout@v2
+        with:
+          ref: ${{ github.head_ref }}
+
+      - name: "Set up node"
+        uses: actions/setup-node@v2
         with:
           node-version: "16"
           cache: "yarn"
-      - run: yarn install
-      - run: yarn build
+
+      - name: "Install"
+        run: yarn install
+
+      - name: "Build"
+        run: yarn build
