--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -4,9 +4,8 @@
   "private": true,
   "license": "GPL-3.0-or-later",
   "scripts": {
-    "build:docker": "cd ../../ && docker build . -f apps/server/Dockerfile -t ghcr.io/wired-xr/server:latest --build-arg SCOPE=@wired-xr/server",
-    "dev": "nodemon ./src/server.js",
-    "start": "nodemon ./src/server.js"
+    "dev": "nodemon ./nodejs/server.js",
+    "start": "nodemon ./nodejs/server.js"
   },
   "dependencies": {
     "nodemon": "^2.0.15",
