--- a/apps/server/nginx/Dockerfile
+++ b/apps/server/nginx/Dockerfile
@@ -3,7 +3,10 @@ WORKDIR /app
 ARG HOSTNAME
 ENV HOSTNAME=${HOSTNAME}
 
-FROM base as runner
+FROM base AS generator
 COPY nginx.conf .
 RUN sed -i "s/example.com/${HOSTNAME}/g" nginx.conf
+
+FROM base AS runner
+COPY --from=generator /app/nginx.conf /etc/nginx/nginx.conf
 CMD ["nginx", "-g", "daemon off;"]
