--- a/apps/server/nginx/nginx.conf
+++ b/apps/server/nginx/nginx.conf
@@ -4,6 +4,7 @@ http {
   server {
     listen 80;
     listen [::]:80;
+
     server_name example.com;
     server_tokens off;
 
@@ -14,28 +15,28 @@ http {
   }
 
   server {
-    listen 443 ssl http2;
-    listen [::]:443 ssl http2;
+    listen 443 ssl;
+    listen [::]:443 ssl;
+
     server_name example.com;
     server_tokens off;
 
-    ssl_certificate           /etc/letsencrypt/live/example.com/fullchain.pem;
-    ssl_certificate_key       /etc/letsencrypt/live/example.com/privkey.pem;
-    ssl_protocols             TLSv1 TLSv1.1 TLSv1.2 TLSv1.3;
-    ssl_prefer_server_ciphers on;
-    ssl_ciphers               ECDH+AESGCM:ECDH+AES256:ECDH+AES128:DH+3DES:!ADH:!AECDH:!MD5;
-
-    ssl_stapling on;
-    ssl_stapling_verify on;
-    resolver 8.8.8.8;
+    ssl_certificate /etc/letsencrypt/live/example.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/example.com/privkey.pem;
+    # include /etc/letsencrypt/options-ssl-nginx.conf;
+    # ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
     location /socket.io {
-      proxy_pass http://127.0.0.1:8080;
+      proxy_pass              http://nodejs;
+      proxy_redirect          off;
 
-      proxy_http_version 1.1;
-      proxy_set_header Upgrade $http_upgrade;
-      proxy_set_header Connection "upgrade";
-      proxy_cache_bypass $http_upgrade;
+      proxy_http_version      1.1;
+
+      proxy_set_header        Upgrade                 $http_upgrade;
+      proxy_set_header        Connection              "upgrade";
+      proxy_set_header        Host                    $host;
+      proxy_set_header        X-Real-IP               $remote_addr;
+      proxy_set_header        X-Forwarded-For         $proxy_add_x_forwarded_for;
     }
   }
 }
