--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -31,6 +31,7 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
+    "react-split": "^2.0.14",
     "socket.io-client": "^4.4.1",
     "three": "^0.140.0",
     "urql": "^2.2.0",
