--- a/apps/host/package.json
+++ b/apps/host/package.json
@@ -4,6 +4,10 @@
   "private": true,
   "license": "GPL-3.0-or-later",
   "scripts": {
-    "dev": "docker up ./elixir -d"
+    "dev": "yarn docker:build && yarn docker:run",
+    "docker:build": "docker build -t wired-xr/host-elixir elixir",
+    "docker:clean": "docker rm host-elixir",
+    "docker:run": "yarn docker:stop && yarn docker:clean && docker run --name host-elixir -p 4000:4000 wired-xr/host-elixir",
+    "docker:stop": "docker stop host-elixir"
   }
 }
