--- a/apps/client/.gitignore
+++ b/apps/client/.gitignore
@@ -1,2 +1,11 @@
+# codegen
 /contracts
-generated
+/src/generated
+
+# PWA files
+**/public/sw.js
+**/public/workbox-*.js
+**/public/worker-*.js
+**/public/sw.js.map
+**/public/workbox-*.js.map
+**/public/worker-*.js.map
