--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -24,6 +24,7 @@
     "jotai": "^1.6.6",
     "nanoid": "^3.3.1",
     "next": "^12.0.7",
+    "next-pwa": "^5.5.4",
     "react": "^18.1.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
