--- a/apps/client/public/manifest.json
+++ b/apps/client/public/manifest.json
@@ -2,7 +2,7 @@
   "$schema": "https://json.schemastore.org/web-manifest-combined.json",
   "background_color": "#fffbfe",
   "categories": ["social", "games", "entertainment"],
-  "description": "A decentralized 3d social platform.",
+  "description": "An open and decentralized 3d social platform",
   "display": "fullscreen",
   "icons": [
     {
