--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -17,6 +17,7 @@
     "@wired-xr/avatar": "*",
     "@wired-xr/scene": "*",
     "ethers": "^5.6.4",
+    "faunadb": "^4.6.0",
     "graphql": "^16.3.0",
     "idb": "^7.0.0",
     "immer": "^9.0.12",
