--- a/apps/host/nginx/nginx.conf
+++ b/apps/host/nginx/nginx.conf
@@ -15,7 +15,7 @@ http {
     ssl_certificate /etc/letsencrypt/live/example.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/example.com/privkey.pem;
 
-    location / {
+    location /ws/ {
       # redirect traffic to elixir app
       proxy_pass              http://docker-elixir;
       proxy_redirect          off;
@@ -24,10 +24,20 @@ http {
       proxy_set_header        X-Real-IP               $remote_addr;
       proxy_set_header        X-Forwarded-For         $proxy_add_x_forwarded_for;
 
-      # WebSocket support
+      # WebSocket upgrade
       proxy_http_version      1.1;
       proxy_set_header        Upgrade                 $http_upgrade;
       proxy_set_header        Connection              "upgrade";
+    }
+
+    location / {
+      # redirect traffic to elixir app
+      proxy_pass              http://docker-elixir;
+      proxy_redirect          off;
+
+      proxy_set_header        Host                    $host;
+      proxy_set_header        X-Real-IP               $remote_addr;
+      proxy_set_header        X-Forwarded-For         $proxy_add_x_forwarded_for;
     }
   }
 }
