--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@wired-xr/scene",
+  "name": "@wired-xr/engine",
   "version": "0.1.0",
   "private": true,
   "license": "GPL-3.0-or-later",
