--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -6,6 +6,7 @@
   "main": "./index.ts",
   "types": "./index.ts",
   "dependencies": {
+    "@pixiv/three-vrm": "^1.0.0-beta.16",
     "@react-three/drei": "^9.6.2",
     "immer": "^9.0.12",
     "nanoid": "^3.3.1",
