set up webrtc host server

--- a/packages/engine/tsconfig.json
+++ b/packages/engine/tsconfig.json
@@ -1,5 +1,4 @@
 {
   "exclude": ["dist", "build", "node_modules"],
-  "extends": "@wired-xr/tsconfig/react-library.json",
-  "include": ["."]
+  "extends": "@wired-xr/tsconfig/react-library.json"
 }
