--- a/apps/host/package.json
+++ b/apps/host/package.json
@@ -3,11 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "license": "GPL-3.0-or-later",
+  "type": "module",
   "scripts": {
-    "dev": "yarn docker:clean && yarn docker:build && yarn docker:run",
-    "docker:build": "docker build -t wired-xr/host-elixir elixir",
-    "docker:clean": "docker rm -f -v host-elixir && docker rmi -f wired-xr/host-elixir",
-    "docker:run": "docker run --name host-elixir -p 4000:4000 wired-xr/host-elixir",
-    "docker:stop": "docker stop host-elixir"
+    "build": "tsc",
+    "dev": "nodemon ./src/server.ts",
+    "start": "nodemon ./src/server.ts"
+  },
+  "dependencies": {
+    "express": "^4.18.1",
+    "mediasoup": "^3.10.0",
+    "socket.io": "^4.5.1"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/node": "^18.0.0",
+    "@wired-xr/engine": "*",
+    "@wired-xr/tsconfig": "*",
+    "nodemon": "^2.0.18",
+    "ts-node": "^10.8.1"
   }
 }
