--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "prettier": "^2.5.1",
     "prettier-plugin-sort-json": "^0.0.2",
     "sort-package-json": "^1.57.0",
-    "turbo": "latest"
+    "turbo": "latest",
+    "typescript": "^4.7.4"
   },
   "packageManager": "yarn@1.22.17",
   "engines": {
