--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -6,10 +6,13 @@
   "main": "./index.ts",
   "types": "./index.ts",
   "dependencies": {
+    "@membraneframework/membrane-webrtc-js": "^0.1.3",
     "@pixiv/three-vrm": "^1.0.0-beta.16",
     "@react-three/drei": "^9.6.2",
     "immer": "^9.0.12",
     "nanoid": "^3.3.1",
+    "socket.io-client": "^4.5.1",
+    "zod": "^3.17.3",
     "zustand": "^3.7.1"
   },
   "devDependencies": {
