set up data channels

--- a/apps/host/tsconfig.json
+++ b/apps/host/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
     "rootDir": "./src",
-    "outDir": "./build"
+    "outDir": "./build",
+    "jsx": "react-jsx"
   },
   "exclude": ["node_modules", "build"],
   "extends": "@wired-xr/tsconfig/base.json"
