--- a/apps/host/package.json
+++ b/apps/host/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "express": "^4.18.1",
     "mediasoup": "^3.10.0",
+    "nanoid": "^4.0.0",
     "socket.io": "^4.5.1"
   },
   "devDependencies": {
