--- a/apps/host/package.json
+++ b/apps/host/package.json
@@ -10,8 +10,10 @@
     "start": "nodemon ./src/server.ts"
   },
   "dependencies": {
+    "@react-three/cannon": "^6.3.0",
+    "@react-three/fiber": "^8.0.13",
     "express": "^4.18.1",
-    "mediasoup": "^3.10.0",
+    "mediasoup": "^3.10.3",
     "nanoid": "^4.0.0",
     "socket.io": "^4.5.1"
   },
