--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -13,6 +13,7 @@
     "@wired-xr/ipfs": "*",
     "@wired-xr/lens": "*",
     "immer": "^9.0.12",
+    "mediasoup-client": "^3.6.52",
     "nanoid": "^3.3.1",
     "socket.io-client": "^4.5.1",
     "zod": "^3.17.3",
