--- a/apps/examples/package.json
+++ b/apps/examples/package.json
@@ -14,6 +14,7 @@
     "next": "^12.0.7",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-icons": "^4.3.1",
     "three": "^0.140.0"
   },
   "devDependencies": {
