set up client-db

--- a/apps/examples/package.json
+++ b/apps/examples/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "examples",
-  "version": "0.0.0",
+  "name": "@wired-xr/examples",
+  "version": "0.1.0",
   "private": true,
   "license": "GPL-3.0-or-later",
   "scripts": {
