--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -16,9 +16,9 @@
     "@trpc/client": "^9.25.3",
     "@trpc/next": "^9.25.3",
     "@trpc/react": "^9.25.3",
+    "@wired-xr/client-db": "*",
     "@wired-xr/engine": "*",
     "@wired-xr/ethers": "*",
-    "@wired-xr/home": "*",
     "@wired-xr/ipfs": "*",
     "@wired-xr/lens": "*",
     "@wired-xr/new-engine": "*",
