--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "husky": "^8.0.1",
     "lint-staged": "^13.0.0",
     "prettier": "^2.5.1",
+    "prettier-plugin-prisma": "^4.1.0",
     "prettier-plugin-sort-json": "^0.0.2",
     "prettier-plugin-sql": "^0.9.0",
     "sort-package-json": "^1.57.0",
