move client-db api -> next api

--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -5,17 +5,19 @@
   "license": "GPL-3.0-or-later",
   "scripts": {
     "build": "next build",
-    "dev": "next dev -p 3000",
+    "dev": "next dev",
     "lint": "next lint",
     "start": "next start"
   },
   "dependencies": {
+    "@prisma/client": "^4.1.1",
     "@react-three/cannon": "^6.3.0",
     "@react-three/drei": "^9.6.2",
     "@react-three/fiber": "^8.0.13",
-    "@trpc/client": "^9.25.3",
-    "@trpc/next": "^9.25.3",
-    "@trpc/react": "^9.25.3",
+    "@trpc/client": "^9.26.2",
+    "@trpc/next": "^9.26.2",
+    "@trpc/react": "^9.26.2",
+    "@trpc/server": "^9.26.2",
     "@wired-xr/client-db": "*",
     "@wired-xr/engine": "*",
     "@wired-xr/ethers": "*",
@@ -26,6 +28,7 @@
     "idb": "^7.0.0",
     "immer": "^9.0.12",
     "jotai": "^1.6.6",
+    "jsonwebtoken": "^8.5.1",
     "nanoid": "^3.3.1",
     "next": "^12.0.7",
     "next-pwa": "^5.5.4",
@@ -34,10 +37,11 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
-    "react-query": "^3.39.1",
+    "react-query": "3.39.2",
     "react-split": "^2.0.14",
     "three": "^0.140.0",
     "urql": "^2.2.0",
+    "zod": "^3.17.10",
     "zustand": "^3.7.1"
   },
   "devDependencies": {
@@ -45,6 +49,7 @@
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "@types/babel__core": "^7",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/react": "^18.0.8",
     "@types/react-dnd": "^3.0.2",
     "@types/react-dom": "^18.0.3",
