--- a/apps/client-db/.env
+++ b/apps/client-db/.env
@@ -1,7 +1,7 @@
-API_PORT=5000
-
 DB_USER='postgres'
 DB_PASSWORD='password'
 DB_NAME='client-db'
+DB_HOST='127.0.0.1'
+DB_PORT=5432
 
-SCOPE='@wired-xr/client-db'
+DB_URL="postgres://${DB_USER}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_NAME}"
