--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@prisma/client": "^4.1.1",
+    "@rainbow-me/rainbowkit": "^0.4.5",
     "@react-three/cannon": "^6.3.0",
     "@react-three/drei": "^9.6.2",
     "@react-three/fiber": "^8.0.13",
@@ -20,17 +21,15 @@
     "@trpc/server": "^9.26.2",
     "@wired-xr/client-db": "*",
     "@wired-xr/engine": "*",
-    "@wired-xr/ethers": "*",
     "@wired-xr/ipfs": "*",
     "@wired-xr/lens": "*",
     "@wired-xr/new-engine": "*",
-    "faunadb": "^4.6.0",
-    "idb": "^7.0.0",
+    "ethers": "^5.6.9",
     "immer": "^9.0.12",
     "jotai": "^1.6.6",
-    "jsonwebtoken": "^8.5.1",
     "nanoid": "^3.3.1",
     "next": "^12.0.7",
+    "next-auth": "^4.10.3",
     "next-pwa": "^5.5.4",
     "react": "^18.1.0",
     "react-dnd": "^16.0.1",
@@ -41,6 +40,7 @@
     "react-split": "^2.0.14",
     "three": "^0.140.0",
     "urql": "^2.2.0",
+    "wagmi": "^0.6.0",
     "zod": "^3.17.10",
     "zustand": "^3.7.1"
   },
@@ -49,7 +49,6 @@
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "@types/babel__core": "^7",
-    "@types/jsonwebtoken": "^8.5.8",
     "@types/react": "^18.0.8",
     "@types/react-dnd": "^3.0.2",
     "@types/react-dom": "^18.0.3",
