--- a/packages/lens/package.json
+++ b/packages/lens/package.json
@@ -10,10 +10,10 @@
     "codegen": "graphql-codegen --config codegen.yml && typechain --target ethers-v5 --out-dir contracts '**/abis/*.json'"
   },
   "dependencies": {
-    "@wired-xr/ethers": "*",
     "@wired-xr/ipfs": "*",
     "graphql": "^16.3.0",
-    "urql": "^2.2.0"
+    "urql": "^2.2.0",
+    "wagmi": "^0.6.0"
   },
   "devDependencies": {
     "@ethersproject/abi": "^5.6.2",
