--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ coverage
 .next/
 out/
 build
+dist
 
 # misc
 .DS_Store
@@ -31,3 +32,6 @@ yarn-error.log*
 
 # turbo
 .turbo
+
+# typescript
+*.tsbuildinfo
