--- a/packages/new-engine/tsconfig.json
+++ b/packages/new-engine/tsconfig.json
@@ -2,15 +2,15 @@
   "compilerOptions": {
     "rootDir": "./src",
     "outDir": "./build",
-    "composite": true,
-    "incremental": true,
-    "lib": ["ESNext", "DOM"]
+    "lib": ["ESNext", "DOM", "WebWorker"],
+    "composite": true
   },
-  "exclude": ["dist", "build", "node_modules"],
+  "exclude": ["./src/workers/**/*.ts"],
   "extends": "@wired-xr/tsconfig/base.json",
+  "include": ["./src/**/*.ts"],
   "references": [
     {
-      "path": "src/workers"
+      "path": "./src/workers"
     }
   ]
 }
