update infura api

--- a/apps/client/.env
+++ b/apps/client/.env
@@ -1,2 +1,6 @@
 ALCHEMY_ID=""
-NEXT_AUTH_SECRET="123456789"
+NEXT_AUTH_SECRET=""
+
+NEXT_PUBLIC_IPFS_AUTH=""
+NEXT_PUBLIC_IPFS_ENDPOINT= "https://ipfs.infura.io:5001"
+NEXT_PUBLIC_IPFS_GATEWAY= "https://wired.ipfs.infura-ipfs.io"
