--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -57,6 +57,7 @@
     "next-transpile-modules": "^9.0.0",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8",
+    "terser-webpack-plugin": "^5.3.4",
     "typescript": "^4.7.4",
     "webpack": "^5.74.0"
   }
