--- a/apps/host/package.json
+++ b/apps/host/package.json
@@ -16,8 +16,7 @@
     "mediasoup": "^3.10.5",
     "nanoid": "^4.0.0",
     "react": "^18.2.0",
-    "socket.io": "^4.5.1",
-    "three": "^0.140.0"
+    "socket.io": "^4.5.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
