--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -12,11 +12,17 @@
   },
   "dependencies": {
     "@dimforge/rapier3d": "^0.9.0",
+    "@gltf-transform/core": "^2.3.0",
+    "@gltf-transform/extensions": "^2.3.0",
+    "@gltf-transform/functions": "^2.3.0",
     "@pixiv/three-vrm": "^1.0.0-beta.18",
+    "@types/draco3d": "^1.4.1",
     "bitecs": "^0.3.38",
     "mediasoup-client": "^3.6.55",
+    "meshoptimizer": "^0.18.1",
     "nanoid": "^4.0.0",
     "socket.io-client": "^4.5.1",
+    "three": "^0.140.2",
     "ts-loader": "^9.3.1"
   },
   "devDependencies": {
@@ -29,8 +35,5 @@
     "jest-environment-jsdom": "^28.1.3",
     "ts-jest": "^28.0.7",
     "typescript": "^4.7.4"
-  },
-  "peerDependencies": {
-    "three": "^0.140.2"
   }
 }
