--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "codegen": "turbo run codegen",
     "dev": "turbo run dev --parallel",
     "format": "prettier --write . --ignore-path .gitignore && npx sort-package-json",
-    "postinstall": "husky install",
+    "postinstall": "husky install && patch-package",
     "lint": "turbo run lint",
     "test": "turbo run test"
   },
@@ -24,6 +24,8 @@
     "@trivago/prettier-plugin-sort-imports": "^3.3.0",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
+    "patch-package": "^6.4.7",
+    "postinstall-postinstall": "^2.1.0",
     "prettier": "^2.7.1",
     "prettier-plugin-prisma": "^4.1.0",
     "prettier-plugin-sort-json": "^0.0.3",
