--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -28,6 +28,7 @@
     "nanoid": "^4.0.0",
     "next": "^12.2.5",
     "next-auth": "^4.10.3",
+    "next-axiom": "^0.14.0",
     "next-pwa": "^5.5.5",
     "react": "^18.2.0",
     "react-dnd": "^16.0.1",
