run eslint on packages

--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "license": "GPL-3.0-or-later",
-  "type": "module",
   "main": "./src/index.ts",
   "types": "./src/index.ts",
   "scripts": {
+    "lint": "eslint src",
     "test": "node --experimental-vm-modules ../../node_modules/jest/bin/jest.js",
     "test:watch": "node --experimental-vm-modules ../../node_modules/jest/bin/jest.js --watch"
   },
