--- a/packages/ipfs/package.json
+++ b/packages/ipfs/package.json
@@ -3,9 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "license": "GPL-3.0-or-later",
-  "type": "module",
   "main": "./index.ts",
   "types": "./index.ts",
+  "scripts": {
+    "lint": "eslint src"
+  },
   "dependencies": {
     "ipfs-http-client": "^57.0.3"
   },
