--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "build": "turbo run build",
     "codegen": "turbo run codegen",
+    "deploy": "turbo run deploy",
     "dev": "turbo run dev --parallel",
     "format": "prettier --write . --ignore-path .gitignore && npx sort-package-json",
     "postinstall": "husky install && patch-package",
