--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@wired-xr/client",
+  "name": "@wired-labs/client",
   "version": "0.1.0",
   "private": true,
   "license": "GPL-3.0-or-later",
@@ -19,9 +19,9 @@
     "@trpc/next": "^9.27.0",
     "@trpc/react": "^9.27.0",
     "@trpc/server": "^9.27.0",
-    "@wired-xr/engine": "*",
-    "@wired-xr/ipfs": "*",
-    "@wired-xr/lens": "*",
+    "@wired-labs/engine": "*",
+    "@wired-labs/ipfs": "*",
+    "@wired-labs/lens": "*",
     "ethers": "^5.6.9",
     "immer": "^9.0.15",
     "jotai": "^1.7.8",
@@ -49,7 +49,7 @@
     "@types/babel__core": "^7.1.19",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
-    "@wired-xr/tsconfig": "*",
+    "@wired-labs/tsconfig": "*",
     "autoprefixer": "^10.4.8",
     "eslint": "^8.22.0",
     "eslint-config-custom": "*",
