--- a/apps/host/package.json
+++ b/apps/host/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@wired-xr/host",
+  "name": "@wired-labs/host",
   "version": "0.1.0",
   "private": true,
   "license": "GPL-3.0-or-later",
@@ -20,8 +20,8 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^18.7.3",
-    "@wired-xr/engine": "*",
-    "@wired-xr/tsconfig": "*",
+    "@wired-labs/engine": "*",
+    "@wired-labs/tsconfig": "*",
     "eslint": "^8.22.0",
     "eslint-config-custom": "*",
     "nodemon": "^2.0.19",
