--- a/apps/host/tsconfig.json
+++ b/apps/host/tsconfig.json
@@ -5,5 +5,5 @@
     "jsx": "react-jsx"
   },
   "exclude": ["node_modules", "build"],
-  "extends": "@wired-xr/tsconfig/base.json"
+  "extends": "@wired-labs/tsconfig/base.json"
 }
