--- a/packages/ipfs/package.json
+++ b/packages/ipfs/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@wired-xr/ipfs",
+  "name": "@wired-labs/ipfs",
   "version": "0.0.0",
   "private": true,
   "license": "GPL-3.0-or-later",
@@ -14,7 +14,7 @@
   "devDependencies": {
     "@types/react": "18.0.17",
     "@types/react-dom": "^18.0.6",
-    "@wired-xr/tsconfig": "*",
+    "@wired-labs/tsconfig": "*",
     "eslint": "^8.22.0",
     "eslint-config-custom": "*",
     "typescript": "^4.7.4"
