--- a/turbo.json
+++ b/turbo.json
@@ -18,6 +18,7 @@
         "$S3_REGION",
         "$S3_ACCESS_KEY_ID",
         "$S3_SECRET",
+        "$BUNDLE_ANALYZE",
         "$NODE_ENV",
         "$VERCEL_URL"
       ],
