--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -21,10 +21,10 @@
     "@trpc/react": "^9.27.0",
     "@trpc/server": "^9.27.0",
     "@wired-labs/engine": "*",
-    "@wired-labs/ipfs": "*",
     "@wired-labs/lens": "*",
     "ethers": "^5.6.9",
     "immer": "^9.0.15",
+    "ipfs-http-client": "^57.0.3",
     "jotai": "^1.7.8",
     "nanoid": "^4.0.0",
     "next": "^12.2.5",
